# COUCHDB-CLI-Python

./: Dockerfile  README.md  app.py  config.py  pyproject.toml  requirements.txt  task_list.sh  task_list_danial.json
