[tool.poetry]
name = "cli_python"
version = "0.1.0"
description = ""
authors = ["Danial Habibi <danztensai@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
CouchDB = "^1.2"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
